se agrega el fronted socialsoccer

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,62 +1,74 @@
-<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
+<section class="Carousel-container">
+  <div class="row Carousel-container-scroll">
+    <div class="col-xs-12 Carousel-padding">
+      <div id="productosCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#productosCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#productosCarousel" data-slide-to="1"></li>
+          <li data-target="#productosCarousel" data-slide-to="2"></li>
+          <li data-target="#productosCarousel" data-slide-to="3"></li>
+          <li data-target="#productosCarousel" data-slide-to="4"></li>
+        </ol>
 
-<div id="captioned-gallery">
-    <figure class="slider">
-        <figure>
-            <img src="assets/images/main/6.jpg" alt>
-            <figcaption class="figcaption">RESERVA TU CANCHA AHORA!!</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/images/main/3.jpg" alt>
-            <figcaption class="figcaption">TOTALMENTE GRATIS</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/images/main/1.jpg" alt>
-            <figcaption class="figcaption">SERVICIO DISPONIBLE LAS 24 HORAS </figcaption>
-        </figure>
-        <figure>
-            <img src="assets/images/main/2.jpg" alt>
-            <figcaption class="figcaption">FACIL Y RAPIDO</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/images/main/5.jpg" alt>
-            <figcaption class="figcaption">SIN COMPLICACIONES</figcaption>
-        </figure>
-    </figure>
-</div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="assets/images/main/1.jpg" alt="...">
+            <div class="carousel-caption">
+              <h3>Producto 1</h3>
+              <p>Este es el producto</p>
+              ...
+            </div>
+          </div>
+          
+          <div class="item">
+            <img src="assets/images/main/2.jpg" alt="...">
+            <div class="carousel-caption">
+              <h3>Producto 2</h3>
+              <p>Este es el producto</p>
 
+            </div>
+          </div>
+          <div class="item">
+            <img src="assets/images/main/3.jpg" alt="...">
+            <div class="carousel-caption">
+              <h3>Producto 3</h3>
+              <p>Este es el producto</p>
 
+            </div>
+          </div>
 
+        </div>
 
-
-
-
-
-<div class="Cancha-main">
-
-<section class="Cancha-description">
-    <div class="MainImage">
-        <article>
-            <p class="Cancha">SOCIAL SOCCER</p>
-            <img class="Cancha-image" src="../assets/images/main/cancha.png" alt="">
-            <figure class="Descripcion">
-                <figcaption class="Work-description">
-                    <h2 class="Somos-title">¿Quienes somos? </h2>
-                    <p class="Somos">Nosotros somos lo que tu buscabas... Somos los especialistas en facilitarte el trabajo dificil de escoger una cancha disponible para tu diversion.. </p>
-
-                </figcaption>
-            </figure>
-        </article>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#productosCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#productosCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
-</section>
-<section class="Cancha-d">
-    <h2 class="Somos-title">¡Has tus reservas! </h2>
-    <p class="Descripcion">reserva tu cancha ya! con un solo click, nuestras instalaciones, por sus facilidades, se prestan para el desarrollo además de campeonatos y actividades deportivas alrededor del fútbol, para eventos de carácter empresarial o personal, para lo cual
-        contamos con la logística necesaria para que usted, su empresa, familia y amigos disfruten de esparcimiento Sano, Seguridad y Comodidad.
-    </p>
-    <img class="Cancha-image" src="../assets/images/main/1.jpg" alt="">
-</section>
+  </div>
 
+<div class="hola">Bienvenidos<div>
+
+<div class="Intro">
+  <div class="container">
+    <div class="row text-left">
+      <div class="col-xs-12 col-md-6">
+        <div class="Intro-container">
+          <div class="Intro-title">
+            <p>Bienvenido a</p>
+            <p>Social Soccer</p>
+            <p>Reserva tu cancha ahora !</p>
+          </div>
+          <a href="" class="Intro-button btn">Comienza Ya</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<p></p>
-<p></p>
