--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,10 +1,55 @@
-<div class="login">
-    <form class="Start" action="index.h" method="post">
-        <h2 class="legal_name">iniciar seccion</h2><br>
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
-        <button class="Button" name="Ingresar">Ingresar</button>
-        <div><a href="" data-testid="" class="recover_account">¿Olvido su contraseña?</a>
-        </div>
-    </form>
+<div class="Login" id="fill" >
+  <div class="container">
+    <div class="row" >
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+        <form class="Login-form" name="loginForm">
+          <h3 class="Login-title">Iniciar sesión</h3><br>
+
+          <!--Angular Material-->
+          <md-input-container class="md-block">
+            <input type="text" placeholder="Número de Documento" md-no-asterisk ng-pattern="/^[0-9]*$/"
+             md-maxlength="15" required name="name" ng-model="vm.user.numDocument">
+            <div ng-messages="loginForm.name.$error">
+              <div ng-message="required">El número de documento es requerido.</div>
+              <div ng-message="pattern">Por favor ingrese un número de documento válido.</div>
+              <div ng-message="md-maxlength">El número debe tener menos de 15 caracteres de longitud.</div>
+            </div>
+          </md-input-container>
+
+          <md-input-container class="md-block">
+            <input type="password" placeholder="Password" md-no-asterisk
+            minlength="4" required name="password" ng-model="vm.user.password">
+            <div ng-messages="loginForm.password.$error">
+              <div ng-message-exp="['required', 'minlength']">
+                Su password debe tener al menos 4 caracteres de longitud.
+              </div>
+            </div>
+          </md-input-container>
+
+          <div class="Login-formBottom">
+            <a href="#">¿Has olvidado tu contraseña?</a>
+            <md-button class="Register-button md-raised md-primary" type="submit"
+            ng-click="vm.login()">Iniciar</md-button>
+          </div>
+          <!--<div class="text-center">
+
+          </div>-->
+
+          <!--Estilo original-->
+          <!--<div class="form-group">
+            <input class="form-control" type="text" placeholder="Número de Documento" ng-model="vm.user.numDocument">
+          </div>
+
+          <div class="form-group">
+            <input class="form-control" type="password" placeholder="Password" ng-model="vm.user.password">
+          </div>
+
+          <button class="btn btn-primary btn-md" type="submit" ng-click="vm.login()" name="Ingresar">Ingresar</button>
+
+          <a href="" class="NoDecoration">¿Olvido su contraseña?</a>-->
+
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
