--- a/client/app/users/users-update/users-update.html
+++ b/client/app/users/users-update/users-update.html
@@ -1,25 +1,88 @@
-<div class="container">
-    <div>This is usuarios-update view</div>
+<div class="Update">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <form class="Update-form" ng-submit="vm.updateUser()">
 
-    <form name="userForm" ng-submit="vm.updateUser()">
+          <div class="text-center">
+            <h2 class="Update-title">Actualizar datos</h2>
+          </div>
+          <br>
 
-        <label for="">Nombre</label>
-        <input type="text" ng-model="vm.user.nombres">
+          <div class="form-group">
+            <label class="Update-label">Tipo Documento</label>
+            <select class="form-control" name="typeDocument"  ng-model="vm.user.idDocumentTypes.idDocumentTypes">
+               <option ng-value="{{item.idDocumentTypes}}" ng-repeat="item in vm.documentType">
+                 {{item.description}}
+               </option>
+               <option value="" disabled selected>Tipo de documento</option>
+            </select>
+          </div>
 
-        <label for="">Apellido</label>
-        <input type="text" ng-model="vm.user.apellidos">
+          <div class="row">
+            <div class="col-sm-6 col-md-6">
+              <div class="form-group">
+                <label class="Update-label">Numero de Documento</label>
+                <input class="form-control" type="text" ng-model="vm.user.numDocument">
+              </div>
 
-        <label for="">Email</label>
-        <input type="text" ng-model="vm.user.email">
+              <div class="form-group">
+                <label class="Update-label">Nombres</label>
+                <input class="form-control" type="text" ng-model="vm.user.names">
+              </div>
 
-        <label for="">tipo Documento</label>
-        <input type="text" ng-model="vm.user.idTiposDocumentos.descripcion">
+              <div class="form-group">
+                <label class="Update-label">Departamento</label>
+                <select class="form-control" name="department" ng-model="vm.idDepartment" ng-change="vm.getCities()">
+                  <option ng-value="{{item.idDepartments}}" ng-repeat="item in vm.department">
+                    {{item.name}}
+                  </option>
+                  <option value="" disabled selected>Selecciona tu departamento</option>
+                </select>
+              </div>
 
+              <div class="form-group">
+                <label class="Update-label">Correo</label>
+                <input class="form-control" type="email" ng-model="vm.user.email">
+              </div>
+            </div>
 
-        <label for="">numero Documento</label>
-        <input type="text" ng-model="vm.user.numDocumento">
+            <div class="col-sm-6 col-md-6">
+              <div class="form-group">
+                <label class="Update-label">Género</label>
+                <select class="form-control" name="gender" ng-model="vm.user.gender">
+                  <option value="M">Masculino</option>
+                  <option value="F">Femenino</option>
+                  <option value="O">Otro</option>
+                </select>
+              </div>
 
-        <button type="submit">Actualizar</button>
+              <div class="form-group">
+                <label class="Update-label">Apellidos</label>
+                <input class="form-control" type="text" ng-model="vm.user.lastNames">
+              </div>
 
-    </form>
+              <div class="form-group">
+                <label class="Update-label">Ciudad</label>
+                <select class="form-control" name="city" ng-model="vm.user.idCities.idCities">
+                  <option ng-value="{{item.idCities}}" ng-repeat="item in vm.cities">
+                    {{item.name}}
+                  </option>
+                  <option value="" disabled selected>Selecciona tu ciudad</option>
+                </select>
+              </div>
+
+              <div class="form-group text-center">
+                <a href="" type="button" class="MarginTop btn btn-success btn-lg">Cambiar contraseña</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="text-center">
+            <button class="btn btn-primary btn-lg" type="submit">Actualizar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
