--- a/client/index.html
+++ b/client/index.html
@@ -106,6 +106,8 @@
     <script src="app/login/login.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/main/main.js"></script>
+    <script src="app/nosotros/nosotros.controller.js"></script>
+    <script src="app/nosotros/nosotros.js"></script>
     <script src="app/users/users-create/users-create.controller.js"></script>
     <script src="app/users/users-list/users-list.controller.js"></script>
     <script src="app/users/users-update/users-update.controller.js"></script>
