--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -52,8 +52,6 @@
     </div>
   </div>
 
-<div class="hola">Bienvenidos<div>
-
 <div class="Intro">
   <div class="container">
     <div class="row text-left">
@@ -70,3 +68,24 @@
     </div>
   </div>
 </div>
+<!--div class="Informacion">
+  <div class="container">
+    <div class="row text-center">
+      <div class="Informacion-item col-xs-12 col-md-4">
+        <i class="fa fa-futbol-o"></i>
+        <h3>+ 88</h3>
+        <p class="text-muted">Canchas</p>
+      </div>
+      <div class="Informacion-item col-xs-12 col-md-4">
+        <i class="fa fa-futbol-o"></i>
+        <h3>+ 15</h3>
+        <p class="text-muted">Establecimientos</p>
+      </div>
+      <div class="Informacion-item col-xs-12 col-md-4">
+        <i class="fa fa-futbol-o"></i>
+        <h3>+ 1534</h3>
+        <p class="text-muted">Usuarios</p>
+      </div>
+    </div>
+  </div>
+</div-->
