--- a/client/app/nosotros/nosotros.html
+++ b/client/app/nosotros/nosotros.html
@@ -28,17 +28,17 @@
 <div class="Informacion">
   <div class="container">
     <div class="row text-center containerText">
-      <div class="Informacion-item col-xs-12 col-md-6">
+      <div class="Informacion-item col-xs-12 col-sm-12 col-md-5">
         <i class=""></i>
         <img class="Cancha-image" src="../assets/images/main/2.jpg">
-        <p class="Tittle">¿Quienes somos?</p>
-        <a class="Text">¡Nosotros somos lo que tu buscabas!. te ayudamos a no tener obstaculos para poderte divertir y hacer tu reservas desde cualquier lugar donde estes</a>
+        <h3 class="Tittle">¿Quienes somos?</h3>
+        <h4 class="Text">Te ayudamos a no tener obstaculos para poderte divertir y hacer tu reservas desde cualquier lugar donde estes</h4>
       </div>
-      <div class="Informacion-item col-xs-12 col-md-6">
+      <div class="Informacion-item col-xs-12 col-md-5 col-md-push-2 col-xs-push-0">
         <i class=""></i>
         <img class="Cancha-image" src="../assets/images/main/1.jpg">
-        <p class="Tittle">¡Has tus reservas!</p>
-        <a class="Text">¡Puedes hacerlo gratis y divertirte con tus amigos para pasar momentos innolvidables!</a>
+        <h3 class="Tittle">¡Has tus reservas!</h3>
+        <h4 class="Text">¡Puedes hacerlo gratis y divertirte con tus amigos para pasar momentos innolvidables!</h4>
       </div>
     </div>
   </div>
