--- a/client/index.html
+++ b/client/index.html
@@ -102,12 +102,21 @@
     <script src="app/courts/courts.service.js"></script>
     <script src="app/departments/departments.service.js"></script>
     <script src="app/document_types/document_types.service.js"></script>
+    <script src="app/establishments/establishments.service.js"></script>
     <script src="app/login/login.controller.js"></script>
     <script src="app/login/login.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/main/main.js"></script>
     <script src="app/nosotros/nosotros.controller.js"></script>
     <script src="app/nosotros/nosotros.js"></script>
+    <script src="app/profile/profile.controller.js"></script>
+    <script src="app/profile/profile.js"></script>
+    <script src="app/reservations/reservations-list/reservations-list.controller.js"></script>
+    <script src="app/reservations/reservations-list/reservations-list.js"></script>
+    <script src="app/reservations/reservations.controller.js"></script>
+    <script src="app/reservations/reservations.js"></script>
+    <script src="app/reservations/reservations.service.js"></script>
+    <script src="app/soccer-fields/soccer-fields.service.js"></script>
     <script src="app/users/users-create/users-create.controller.js"></script>
     <script src="app/users/users-list/users-list.controller.js"></script>
     <script src="app/users/users-update/users-update.controller.js"></script>
