--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,6 @@
 <section class="Carousel-container">
   <div class="row Carousel-container-scroll">
-    <div class="col-xs-12 Carousel-padding">
+    <div class="col-xs-12 Carousel-padding Slide-padding">
       <div id="productosCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -12,27 +12,27 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="assets/images/main/1.jpg" alt="...">
+            <img class="img-responsive" src="assets/images/main/1.jpg" alt="...">
             <div class="carousel-caption">
-              <h3>Producto 1</h3>
-              <p>Este es el producto</p>
+              <h3>Cancha 1</h3>
+              <p>Reserva ya!</p>
 
             </div>
           </div>
 
           <div class="item">
-            <img src="assets/images/main/2.jpg" alt="...">
+            <img class="img-responsive" src="assets/images/main/2.jpg" alt="...">
             <div class="carousel-caption">
-              <h3>Producto 2</h3>
-              <p>Este es el producto</p>
+              <h3>Cancha 2</h3>
+              <p>Reserva ya!</p>
 
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/main/3.jpg" alt="...">
+            <img class="img-responsive" src="assets/images/main/3.jpg" alt="...">
             <div class="carousel-caption">
-              <h3>Producto 3</h3>
-              <p>Este es el producto</p>
+              <h3>Cancha 3</h3>
+              <p>Reserva ya!</p>
 
             </div>
           </div>
@@ -51,6 +51,47 @@
       </div>
     </div>
   </div>
+
+<section>
+  <div class="container pintura">
+    <div class="row">
+
+      <div class="Campo-image">
+        <div class="Campo">
+          <div class="Canchas col-xs-12 col-md-4 col-lg-4">
+            <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
+            <h3>Bernabeu</h3>
+            <h4>Cancha</h4>
+            <p>Calle 33 #20-13</p>
+            <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
+          </div>
+        </div>
+        <div class="Campo">
+          <div class="Canchas col-xs-12 col-md-4 col-lg-4">
+            <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
+            <h3>Maracana</h3>
+            <h4>Cancha</h4>
+            <p>Cra 47 #33-20</p>
+            <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
+          </div>
+        </div>
+        <div class="Campo">
+          <div class="Canchas col-xs-12 col-md-4 col-lg-4">
+            <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
+            <h3>Picantico</h3>
+            <h4>Cancha</h4>
+            <p>Calle 20 #40-10</p>
+            <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
+
 
 <div class="Intro">
   <div class="container">
