Ya reserva las canchas y arreglo de formularios

--- a/client/app/users/users-update/users-update.html
+++ b/client/app/users/users-update/users-update.html
@@ -9,7 +9,8 @@
           </div>
           <br>
 
-          <div class="form-group">
+          
+          <div class="form-group col-md-6">
             <label class="Update-label">Tipo Documento</label>
             <select class="form-control" name="typeDocument"  ng-model="vm.user.idDocumentTypes.idDocumentTypes">
                <option ng-value="{{item.idDocumentTypes}}" ng-repeat="item in vm.documentType">
@@ -19,19 +20,23 @@
             </select>
           </div>
 
-          <div class="row">
-            <div class="col-sm-6 col-md-6">
-              <div class="form-group">
+
+              <div class="form-group col-md-6">
                 <label class="Update-label">Numero de Documento</label>
                 <input class="form-control" type="text" ng-model="vm.user.numDocument">
               </div>
 
-              <div class="form-group">
+              <div class="form-group col-md-6">
                 <label class="Update-label">Nombres</label>
                 <input class="form-control" type="text" ng-model="vm.user.names">
               </div>
 
-              <div class="form-group">
+              <div class="form-group col-md-6">
+                <label class="Update-label">Apellidos</label>
+                <input class="form-control" type="text" ng-model="vm.user.lastNames">
+              </div>
+
+              <div class="form-group col-md-6">
                 <label class="Update-label">Departamento</label>
                 <select class="form-control" name="department" ng-model="vm.idDepartment" ng-change="vm.getCities()">
                   <option ng-value="{{item.idDepartments}}" ng-repeat="item in vm.department">
@@ -41,28 +46,7 @@
                 </select>
               </div>
 
-              <div class="form-group">
-                <label class="Update-label">Correo</label>
-                <input class="form-control" type="email" ng-model="vm.user.email">
-              </div>
-            </div>
-
-            <div class="col-sm-6 col-md-6">
-              <div class="form-group">
-                <label class="Update-label">Género</label>
-                <select class="form-control" name="gender" ng-model="vm.user.gender">
-                  <option value="M">Masculino</option>
-                  <option value="F">Femenino</option>
-                  <option value="O">Otro</option>
-                </select>
-              </div>
-
-              <div class="form-group">
-                <label class="Update-label">Apellidos</label>
-                <input class="form-control" type="text" ng-model="vm.user.lastNames">
-              </div>
-
-              <div class="form-group">
+              <div class="form-group col-md-6">
                 <label class="Update-label">Ciudad</label>
                 <select class="form-control" name="city" ng-model="vm.user.idCities.idCities">
                   <option ng-value="{{item.idCities}}" ng-repeat="item in vm.cities">
@@ -72,14 +56,27 @@
                 </select>
               </div>
 
-              <div class="form-group text-center">
-                <a href="" type="button" class="MarginTop btn btn-success btn-lg">Cambiar contraseña</a>
+              <div class="form-group col-md-6">
+                <label class="Update-label">Género</label>
+                <select class="form-control" name="gender" ng-model="vm.user.gender">
+                  <option value="M">Masculino</option>
+                  <option value="F">Femenino</option>
+                  <option value="O">Otro</option>
+                </select>
               </div>
-            </div>
+
+              <div class="form-group col-md-6">
+                <label class="Update-label">Correo</label>
+                <input class="form-control" type="email" ng-model="vm.user.email">
+              </div>
+
+
+          <div class="form-group text-center col-md-6">
+            <a href="" type="button" class="MarginTop btn btn-success btn-lg">Cambiar contraseña</a>
           </div>
 
-          <div class="text-center">
-            <button class="btn btn-primary btn-lg" type="submit">Actualizar</button>
+          <div class="text-center ">
+            <button class="MarginTop btn btn-primary btn-lg" type="submit">Actualizar</button>
           </div>
         </form>
       </div>
