--- a/client/app/reservations/reservations.html
+++ b/client/app/reservations/reservations.html
@@ -13,47 +13,39 @@
 
           <div layout="row">
             <md-input-container flex="45">
-              <label for="">Fecha</label>
+              <label class="Registrer-label">Fecha</label>
               		<div class="form-group">
-              			<input type="text" class="form-control" ng-model="vm.reservations.date" required>
+              			<input type="date" class="form-control" ng-model="vm.reservations.date" required>
               		</div>
               <div ng-messages="registerForm.typeDocument.$error">
                 <div ng-message="required">La fecha es requerida</div>
               </div>
             </md-input-container>
-            <div flex="10">
-
-            </div>
-          </div>
-          <div layout="row">
             <md-input-container flex="45">
-              <label for="">Hora Inicial</label>
-              		<div class="form-group">
-              			<input type="text" class="form-control" ng-model="vm.reservations.initialHour" required>
-              		</div>
+              <label class="Registrer-label">Hora Inicial</label>
+                  <div class="form-group">
+                    <input type="time" class="form-control" ng-model="vm.reservations.initialHour" required>
+                  </div>
               <div ng-messages="registerForm.typeDocument.$error">
                 <div ng-message="required">La hora es requerida</div>
               </div>
             </md-input-container>
+
             <div flex="10">
 
             </div>
           </div>
+
           <div layout="row">
             <md-input-container flex="45">
               <label for="">Hora Final</label>
               		<div class="form-group">
-              			<input type="text" class="form-control" ng-model="vm.reservations.finalHour" required>
+              			<input type="time" class="form-control" ng-model="vm.reservations.finalHour" required>
               		</div>
               <div ng-messages="registerForm.typeDocument.$error">
                 <div ng-message="required">La hora es requerida</div>
               </div>
             </md-input-container>
-            <div flex="10">
-
-            </div>
-          </div>
-          <div layout="row">
             <md-input-container flex="45">
               <label for="">Usuario</label>
                   <div class="form-group">
@@ -67,6 +59,7 @@
 
             </div>
           </div>
+
           <div layout="row">
             <md-input-container flex="45">
               <label for="">Cancha</label>
