se agrega la seguridad por rol del OWNER

--- a/client/app/reservations/reservations-list/reservations-list.html
+++ b/client/app/reservations/reservations-list/reservations-list.html
@@ -9,6 +9,7 @@
         <th>Hora Final</th>
         <th>Nombres Usuario</th>
         <th>Apellidos Usuario</th>
+        <th>Establecimiento</th>
         <th>Cancha</th>
         <th>Torneo</th>
 
@@ -21,6 +22,7 @@
         <td>{{item.finalHour}}</td>
         <td>{{item.idUsers.names}}</td>
         <td>{{item.idUsers.lastNames}}</td>
+        <td>{{item.idSoccerFields.idHeadquarters.idEstablishments.name}}</td>
         <td>{{item.idSoccerFields.name}}</td>
         <td>{{item.idTournaments.name}}</td>
       </tr>
