Arreglos en el profile

--- a/client/app/users/users-create/users-create.html
+++ b/client/app/users/users-create/users-create.html
@@ -143,7 +143,7 @@
           </div>
 
           <div class="text-center">
-            <md-button class="Register-button md-raised md-primary" type="submit">Crear cuenta</md-button>
+            <md-button class="Regis Register-button md-raised md-primary" type="submit">Crear cuenta</md-button>
           </div>
         </form>
 
