se han hecho cambios en el footer

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -55,14 +55,13 @@
 <section>
   <div class="container pintura">
     <div class="row">
-
       <div class="Campo-image">
         <div class="Campo">
           <div class="Canchas col-xs-12 col-md-4 col-lg-4">
             <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
-            <h3>Bernabeu</h3>
+            <h3>Maracana</h3>
             <h4>Cancha</h4>
-            <p>Calle 33 #20-13</p>
+            <p>Cra 47 #33-20</p>
             <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
           </div>
         </div>
