--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -28,26 +28,8 @@
 
           <div class="Login-formBottom">
             <a href="#">¿Has olvidado tu contraseña?</a>
-            <md-button class="Register-button md-raised md-primary" type="submit"
-            ng-click="vm.login()">Iniciar</md-button>
+            <md-button class="Register-button md-raised md-primary" type="submit" ng-click="vm.login()">Iniciar</md-button>
           </div>
-          <!--<div class="text-center">
-
-          </div>-->
-
-          <!--Estilo original-->
-          <!--<div class="form-group">
-            <input class="form-control" type="text" placeholder="Número de Documento" ng-model="vm.user.numDocument">
-          </div>
-
-          <div class="form-group">
-            <input class="form-control" type="password" placeholder="Password" ng-model="vm.user.password">
-          </div>
-
-          <button class="btn btn-primary btn-md" type="submit" ng-click="vm.login()" name="Ingresar">Ingresar</button>
-
-          <a href="" class="NoDecoration">¿Olvido su contraseña?</a>-->
-
         </form>
       </div>
     </div>
