--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,37 +8,35 @@
           <li data-target="#productosCarousel" data-slide-to="1"></li>
           <li data-target="#productosCarousel" data-slide-to="2"></li>
         </ol>
-
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
             <img class="img-responsive" src="assets/images/main/1.jpg" alt="...">
             <div class="carousel-caption">
-              <h3>Cancha 1</h3>
-              <p>Reserva ya!</p>
-
+              <h3>Reserva ya en Social Soccer</h3>
+              <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
+                <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
 
           <div class="item">
             <img class="img-responsive" src="assets/images/main/2.jpg" alt="...">
             <div class="carousel-caption">
-              <h3>Cancha 2</h3>
-              <p>Reserva ya!</p>
-
+              <h3>Reserva ya en Social Soccer</h3>
+              <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
+                <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
+
           <div class="item">
             <img class="img-responsive" src="assets/images/main/3.jpg" alt="...">
             <div class="carousel-caption">
-              <h3>Cancha 3</h3>
-              <p>Reserva ya!</p>
-
+              <h3>Reserva ya en Social Soccer</h3>
+              <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
+                <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
-
         </div>
-
         <!-- Controls -->
         <a class="left carousel-control" href="#productosCarousel" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -55,43 +53,20 @@
 <section>
   <div class="container pintura">
     <div class="row">
-
       <div class="Campo-image">
         <div class="Campo">
-          <div class="Canchas col-xs-12 col-md-4 col-lg-4">
-            <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
-            <h3>Bernabeu</h3>
-            <h4>Cancha</h4>
-            <p>Calle 33 #20-13</p>
-            <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
-          </div>
+         <h1 class="TRABAJANDO">EN PROCESO</h1>
         </div>
         <div class="Campo">
-          <div class="Canchas col-xs-12 col-md-4 col-lg-4">
-            <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
-            <h3>Maracana</h3>
-            <h4>Cancha</h4>
-            <p>Cra 47 #33-20</p>
-            <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
-          </div>
+          
         </div>
         <div class="Campo">
-          <div class="Canchas col-xs-12 col-md-4 col-lg-4">
-            <img class="imagen" src="../../assets/images/header/1.jpg" alt="">
-            <h3>Picantico</h3>
-            <h4>Cancha</h4>
-            <p>Calle 20 #40-10</p>
-            <button ui-sref="reservations" class="btn Btn-adsi" type="button" name="button">Reservar</button>
-          </div>
+      
         </div>
-
       </div>
     </div>
   </div>
-
 </section>
-
-
 
 <div class="Intro">
   <div class="container">
@@ -109,24 +84,4 @@
     </div>
   </div>
 </div>
-<!--div class="Informacion">
-  <div class="container">
-    <div class="row text-center">
-      <div class="Informacion-item col-xs-12 col-md-4">
-        <i class="fa fa-futbol-o"></i>
-        <h3>+ 88</h3>
-        <p class="text-muted">Canchas</p>
-      </div>
-      <div class="Informacion-item col-xs-12 col-md-4">
-        <i class="fa fa-futbol-o"></i>
-        <h3>+ 15</h3>
-        <p class="text-muted">Establecimientos</p>
-      </div>
-      <div class="Informacion-item col-xs-12 col-md-4">
-        <i class="fa fa-futbol-o"></i>
-        <h3>+ 1534</h3>
-        <p class="text-muted">Usuarios</p>
-      </div>
-    </div>
-  </div>
-</div-->
+
